feat: upgrade stack to Spark 4.1.2 / Hive 4.1.0 / Hadoop 3.5.0 (JDK 17)
Unify the whole cluster on JDK 17 and the Spark 4.x / Hive 4.x / Hadoop 3.5
lines. Verified end-to-end (local-mode smoke test + Spark Connect gRPC →
YARN → HDFS → HMS) on a fresh `down -v` rebuild.

- Hadoop 3.4.1 (JDK8) -> 3.5.0 (JDK17). hadoop-base now temurin:17-jdk;
  HADOOP_OPTS injects the --add-opens/--add-exports needed for UGI/NIO/
  security reflection on JDK 17. Download moved to the huaweicloud mirror.
- Hive 3.1.3 (JDK8) -> 4.1.0 (JDK17), inherited from hadoop-base.
- Spark 3.5.3 (JDK11/Scala2.12) -> 4.1.2 (JDK17/Scala2.13). Spark Connect is
  bundled in 4.x, so the --packages/Ivy pre-resolution and MAVEN_MIRROR are
  removed from the image and entrypoint.
- mysql-connector-java 8.0.28 -> mysql-connector-j 9.1.0 (old coord is EOL).
- ClickHouse JDBC 0.4.6 retained (uber-jar, runs fine on JDK 17).

Key fix: Spark 4.1's builtin Hive 2.3.10 metastore client calls the Thrift
method get_table, removed in Hive 4.x (-> "Invalid method name: 'get_table'").
Bake the Hive 4.1.0 client jars into the Spark image (COPY --from the hive
image via a named stage) and load them via spark.sql.hive.metastore.jars=path
with metastore.version=4.1.0 (SPARK-45265) — no runtime Maven/Ivy. Makefile
now builds hive-metastore before spark-connect (was parallel).

Also set spark.sql.ansi.enabled=false to preserve Spark 3.5 SQL semantics
during the infra jump. Details in problems.md "版本升级" section.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>